fix safari images not showing

--- a/src/components/FeaturedImage/FeaturedImage.module.scss
+++ b/src/components/FeaturedImage/FeaturedImage.module.scss
@@ -18,6 +18,7 @@
     height: -webkit-fill-available;
     object-fit: cover;
     width: 100%;
+    height: auto;
     border-radius: 7px;
     position: absolute;
     top: 0;
